Fixed navigation issues and bar

--- a/public/style.css
+++ b/public/style.css
@@ -61,3 +61,28 @@ nav a:hover {
 .container {
     background-color: #FAF8ED;
 }
+
+p {
+    font-size: 20px;
+    padding-right: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+h2 {
+    font-weight: 500;
+    font-size: 35px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+h3 {
+    font-style:italic;
+    font-size: 30px;
+}
+
+
+
