--- a/public/style.css
+++ b/public/style.css
@@ -62,26 +62,19 @@ nav a:hover {
     background-color: #FAF8ED;
 }
 
-p {
-    font-size: 20px;
-    padding-right: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 15%;
+    height: 15%;
+  }
 
-h2 {
-    font-weight: 500;
-    font-size: 35px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-h3 {
-    font-style:italic;
-    font-size: 30px;
+.artist-description {
+    padding-left: 25%;
+    padding-right: 25%;
+    padding-top: 2%;
+    padding-bottom: 5%;
 }
 
 
