--- a/public/style.css
+++ b/public/style.css
@@ -137,3 +137,20 @@ nav a:hover {
     max-width: 100%;
     height: auto;
 }
+
+.developer {
+    display: flex;
+    align-items: center; /* vertically aligns items in the center */
+    margin-bottom: 20px;
+}
+
+.developer img {
+    width: 150px;  
+    height: 150px;
+    object-fit: cover;
+    margin-right: 20px; /* to give space between image and bio */
+}
+
+.developer p {
+    flex: 1; /* allows the paragraph to take remaining space */
+}
