--- a/public/style.css
+++ b/public/style.css
@@ -166,41 +166,6 @@ nav a:hover {
     border: 5px solid #555;
 }
 
-.dropbtn {
-    background-color: #04AA6D;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-  
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-  
-.dropdown-content {
-    display: none;
-    position: absolute;
-    right: 0;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-  
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-  
-.dropdown-content a:hover {background-color: #f1f1f1;}
-.dropdown:hover .dropdown-content {display: block;}
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
-  
 /* This is for the artists comparison page */
 
 #artistInput {
@@ -236,6 +201,42 @@ nav a:hover {
     background-color: #eee; 
 }
 
+/* This is for the song comparison page */
+#songInput {
+    background-image: url('/images/search-icon.png'); 
+    background-size: 20px 20px;
+    background-position: 10px 12px; 
+    background-repeat: no-repeat; 
+    width: 100%; 
+    font-size: 16px; 
+    padding: 12px 20px 12px 40px; 
+    border: 1px solid #ddd; 
+    margin-bottom: 12px; 
+}
+  
+#song_search {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+  
+#song_search li a {
+    border: 1px solid #ddd; 
+    margin-top: -1px; 
+    background-color: #f6f6f6; 
+    padding: 12px; 
+    text-decoration: none; 
+    font-size: 18px; 
+    color: black; 
+    display: block; 
+}
+  
+#song_search li a:hover:not(.header) {
+    background-color: #eee; 
+}
+
+
+/* Spider Chart */
 #spider_container {
     margin-top:auto;
     margin-left: 450px;
