--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,8 @@ body {
     margin: 0;
     font-family: 'Times New Roman', Times, serif;
     font-weight: 400;
-
+    background-color: white;
+    font-family: Arial, sans-serif;
 }
 
 h1 {
@@ -14,51 +15,116 @@ h1 {
 }
 
 .navigation {
-    width: 80%;
-    margin: 0 auto;
+    display: flex;
+    height: fit-content;
 }
 
 header {
     background: #45474B;
+    color: white;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 header::after {
+    
+    /*
     content: '';
     display: table;
-    clear: both;
+    clear: none;
+    */
 }
+    
+    
 
 nav {
-    float: right;
+    display: inline-block;
 }
 
 nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
+    overflow: hidden;
 }
 
 nav li {
+    /*
     display: inline-block;
-    margin-left: 65px;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    padding-top: 15px;
-    padding-right: 23px;
-    padding-bottom: 15px;
+    */
+    float: inline-start;
+    /*
+    margin-left: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    */
+    text-wrap: nowrap;
+    text-align: start;
 }
 
 nav a {
-    color: #1db954;
+    /*
+    display: block;
+    */
+    color: white;
+    text-align: start;
+    padding: 10px 10px;
     text-decoration: none;
-    text-transform: uppercase;
-    font-size: 18px;
+    
+}
+nav img{
+    width: 75px;  
+    height: 75px;
+    object-fit: scale-down;
+    margin-right: 10px;
+
 }
 
 nav a:hover {
-    color: #1ed760;
-    
+    background-color: #bbcfbb;
+    color: black;
 }
+
+/*End of Basic Overall Arching CSS*/
+
+ /*Flex boxes*/
+.flexbox-container{
+    display: flex;
+    flex-wrap:nowrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    height:fit-content;
+}
+
+.flexbox-item{
+    width:fit-content;
+    margin:30px;
+    flex-shrink: 1;
+    flex-grow: 1;
+
+    /*
+    border: 3px solid black;
+    background-color: white;
+    */
+}
+.flexbox-item1{
+    /*
+    min-height: 100px;
+    */
+    float: left;
+    min-height: 100px;
+    flex-shrink: 1;
+    flex-grow: 1;
+
+}
+
+
+
 
 .container {
     background-color: #FAF8ED;
@@ -333,41 +399,7 @@ nav a:hover {
 .dropdown-content2 a:hover {background-color: #f1f1f1}
 .show {display:block;}
 
-/*Developer Page*/
-body {
-    background-color: white;
-    font-family: Arial, sans-serif;
-}
 
-header {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 1em 0;
-}
-
-nav ul {
-    padding: 0;
-    list-style: none;
-    overflow: hidden;
-}
-
-nav li {
-    float: left;
-}
-
-nav a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-nav a:hover {
-    background-color: #ddd;
-    color: black;
-}
 .developers-heading {
     margin-bottom: 50px; /* Adjusts spacing below the heading */
 }
